<resources>
    <string name="app_name">Address Book</string>


    <string name="action_settings">Settings</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">E-Mail Address</string>
    <string name="address">Address</string>
    <string name="contacts_title">Contacts</string>
    <string name="edit_contact_title">Edit Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_button">ADD</string>
    <string name="save_button">SAVE</string>

    <string name="edit_contact_button">EDIT</string>
    <string name="delete_button">DELETE</string>


</resources>
