<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableRow
        android:background="#000">
        <TextView
            android:id="@+id/editContactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:text="@string/edit_contact_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#FFF"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/firstNameTextView"
            android:padding="@dimen/padding_5dp"
            android:text="@string/first_name"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/firstNameEdittext"
            android:ems="10"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
        <requestFocus/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/lastNameTextView"
            android:padding="@dimen/padding_5dp"
            android:text="@string/last_name"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/lastNameEdittext"
            android:ems="10"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/phonenumberTextView"
            android:padding="@dimen/padding_5dp"
            android:text="@string/phone_number"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/phonenumberEdittext"
            android:ems="10"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"
            android:layout_height="wrap_content"
            android:inputType="phone" />

    </TableRow>


    <TableRow>
        <TextView
            android:id="@+id/emailTextView"
            android:padding="@dimen/padding_5dp"
            android:text="@string/email"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/emailEdittext"
            android:ems="10"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/addressTextView"
            android:padding="@dimen/padding_5dp"
            android:text="@string/address"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/addressEdittext"
            android:ems="10"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress" />

    </TableRow>

    <TableRow
        >
        <Button
            android:id="@+id/editButton"
            android:layout_width="0dip"
            android:text = "@string/edit_contact_button"
            android:onClick="editContact"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/DelButtonButton"
            android:layout_width="0dip"
            android:text = "@string/delete_button"
            android:onClick="deleteContact"
            android:layout_weight="1"
            />
    </TableRow>
</TableLayout>
